force-app/main/default/objects/Integration_Log__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Unique identifier from RingCentral or integration provider</description>
    <externalId>true</externalId>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>