force-app/main/default/objects/Integration_Log__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Recipient phone number for SMS or integration message</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>