force-app/main/default/objects/Integration_Log__c/fields/Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_ID__c</fullName>
    <description>ID of related Lead, Contact, Account, or other record (supports polymorphic relationships)</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>