force-app/main/default/objects/Integration_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the integration event occurred (created/sent/delivered/failed)</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>